--- a/javascript/index.html
+++ b/javascript/index.html
@@ -241,14 +241,40 @@
     </form>
     <p id="result"></p> -->
 
-    <!-- ⑯-3 -->
+    <!-- ⑯-3
     <form>
         <label for="file">ファイル：</label>
         <input type="file" id="file" name="file" /> 
     </form>
-    <img id="result" />
+    <img id="result" /> -->
 
+    <!-- ⑰
+    <form>
+        <div>
+            <label for="name">サイト名:</label><br />
+            <input type="text" id="name" name="name" size="30" />
+        </div>
+        <div>
+            <label for="url">URL:</label><br />
+            <input type="url" id="url" name="url" size="50" />
+        </div>
+        <div>
+            <input type="button" id="btn" value="追加" />
+        </div>
+    </form>
+    <div id="list"></div> -->
 
+    <!-- ⑱
+    <ul id="list"></ul> -->
+
+    <!-- ⑲ -->
+    <!-- <ul id="list">
+        <li><a href="JavaScript:void(0)" data-isbn="978-4-7981-3547-2">独習PHP</a></li>
+        <li><a href="JavaScript:void(0)" data-isbn="978-4-7741-8030-4">JAVA ポケットリファレンス</a></li>
+        <li><a href="JavaScript:void(0)" data-isbn="978-4-7741-7984-1">Swiftポケットリファレンス</a></li>
+    </ul>
+    <input type="button" id="del" value="削除" disabled />
+    <div id="pic"></div> -->
 
 
     <script src="./test2.js"></script>
